# femtovg

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: book.yml  ci.yml
assets/: screen.frag.glsl  screen.vert.glsl
book/: book.toml
book/src/: SUMMARY.md  index.md
book/src/1_getting_started/: 0_intro.md  1_opengl.md  1_setting_up.md  1_setting_up.rs  2_rendering.md  2_rendering.rs  3_event_loop.md  3_event_loop.rs
examples/: README.md  breakout.rs  bricks.rs  demo.rs  external_text.rs  external_text_cosmic.rs  external_text_parley.rs  font_variations.rs  font_weight.rs  gradients.rs  index.html  many_rects.rs  miniquad.rs  paint_filter.rs  paint_filter_miniquad.rs  paint_image.rs  paint_image_miniquad.rs  path3d.rs  shader.rs  svg.rs  testing.rs  text.rs
examples/helpers/: mod.rs  opengl.rs  perf_graph.rs  wgpu.rs
examples/render_targets/: Cargo.toml
examples/render_targets/src/: main.rs
src/: atlas.rs  color.rs  error.rs  font_cache.rs  font_manager.rs  geometry.rs  gradient_store.rs  image.rs  lib.rs  math.rs  paint.rs  path.rs  path_cache.rs  position.rs  renderer.rs  text.rs  utils.rs  vector.rs
src/font_cache/: atlas.rs  freetype.rs  shaper.rs
src/font_cache/shaper/: freetype_source.rs
src/font_manager/: freetype.rs  shaper.rs
src/font_manager/shaper/: combining_class.rs
src/path/: cache.rs
src/renderer/: gl.rs  gpu.rs  gpu_paint.rs  gpu_renderer.rs  gpu_stencil.rs  image_renderer.rs  miniquad.rs  opengl.rs  params.rs  stc.rs  void.rs  webgpu.rs  wgpu.rs
src/renderer-old/: gl.rs
src/renderer-old/gl/: uniform_array.rs
src/renderer/gl/: shader.rs
src/renderer/gpu/: gpu_paint.rs  gpu_path.rs  opengl.rs
src/renderer/gpu_renderer/: gpu_paint.rs  gpu_path.rs  opengl.rs
src/renderer/gpu_renderer/opengl/: main-vs.glsl  shader.rs  uniform_array.rs
src/renderer/gpu_stencil/: opengl.rs
src/renderer/gpu_stencil/opengl/: main-fs.glsl  uniform_array.rs
src/renderer/opengl/: blur-fs.glsl  blur-vs.glsl  framebuffer.rs  gl_texture.rs  main-fs.glsl  main-vs.glsl  program.rs  shader.rs  texture.rs  uniform_array.rs
src/renderer/stc/: opengl.rs  stc_paint.rs  stc_path.rs
src/renderer/stc/opengl/: uniform_array.rs
src/renderer/webgpu/: TODO.md  wgpu_queue.rs  wgpu_texture.rs  wgpu_vec.rs
src/renderer/wgpu/: shader.wgsl
src/text/: atlas.rs  font.rs  fontdb.rs  freetype.rs  renderer.rs  shaper.rs  text_helper.rs  text_renderer.rs  textlayout.rs
src/text/freetype/: ffi.rs
src/text/shaper/: run_segmentation.rs
src/text/text_renderer/: atlas.rs
tests/: blit_scissor_wgpu.rs  conic_scissor_wgpu.rs  gradient_dither_wgpu.rs  gradient_stress_wgpu.rs  integration.rs  shadow_wgpu.rs  text_scale_position_wgpu.rs  transform2D.rs
