[package]
name = "femtovg"
description = "Antialiased 2D vector drawing library"
version = "0.3.5"
license = "MIT/Apache-2.0"
readme = "README.md"
authors = ["Peter Todorov <ptodorov@cytec.bg>", "Adam Nemecek <adamnemecek@gmail.com>"]
keywords = ["graphics", "canvas", "vector", "drawing", "gpu"]
categories = ["graphics"]
repository = "https://github.com/femtovg/femtovg"
edition = "2021"
exclude = [
    "assets",
    "examples",
]

[profile.release]
debug = true

[dependencies]
fnv = "1.0.7"
rgb = "0.8.20"
imgref = "1.6.1"
bitflags = "1.2.1"
ttf-parser = "0.15.0"
rustybuzz = "0.5.0"
unicode-bidi = "0.3.4"
unicode-segmentation = "1.6.0"
generational-arena = "0.2.8"
lru = { version = "0.7.1", default-features = false }
image = { version = "0.24.0", optional = true, default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }
ouroboros = { version = "0.15" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glow = { version = "0.11.0", default-features = false }
glutin = { version = "0.29.0", optional = true, default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
glow = { version = "0.11.0", default-features = false }
web_sys = { version = "0.3", package = "web-sys", features = ["WebGlContextAttributes", "HtmlImageElement"] }
wasm-bindgen = { version = "0.2" }

[features]
default = ["image-loading", "glutin"]
image-loading = ["image"]
debug_inspector = []

[dev-dependencies]
winit = { version = "0.26.1", default-features = false }
euclid = "0.22.3"
rand = "0.8"
svg = "0.10.0"
usvg = { version = "0.23.0", default-features = false, features = ["export", "filter"] }
instant = { version = "0.1", features = [ "now" ] }
resource = "0.5.0"
image = { version = "0.24.0", default-features = false, features = ["jpeg", "png"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
glutin = "0.29.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
winit = { version = "0.26.1", default-features = false }
wasm-bindgen = { version = "0.2" }
web_sys = { version = "0.3", package = "web-sys", features=["console", "WebGlContextAttributes"] }
console_error_panic_hook = "0.1.5"
instant = { version = "0.1", features = [ "wasm-bindgen", "now" ] }
resource = { version = "0.5.0", features = [ "force-static" ] }
getrandom = { version = "0.2.2", features = ["js"] }
