[package]
name = "femtovg"
description = "Antialiased 2D vector drawing library"
version = "0.9.1"
license = "MIT/Apache-2.0"
readme = "README.md"
authors = [
    "Peter Todorov <ptodorov@cytec.bg>",
    "Adam Nemecek <adamnemecek@gmail.com>",
]
keywords = ["graphics", "canvas", "vector", "drawing", "gpu"]
categories = ["graphics"]
repository = "https://github.com/femtovg/femtovg"
edition = "2021"
exclude = ["assets", "examples"]

[profile.release]
debug = true

[dependencies]
fnv = "1.0.7"
rgb = "0.8.37"
imgref = "1.10.1"
bitflags = "2.6.0"
rustybuzz = "0.14.1"
unicode-bidi = "0.3.15"
unicode-segmentation = "1.11.0"
slotmap = "1.0.7"
lru = { version = "0.12.3", default-features = false }
image = { version = "0.25.0", optional = true, default-features = false }
serde = { version = "1.0", optional = true, features = ["derive", "rc"] }
glow = { version = "0.13.0", default-features = false }
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = { version = "0.30.3", optional = true, default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_sys = { version = "0.3", package = "web-sys", features = [
    "WebGlContextAttributes",
    "HtmlImageElement",
    "WebGl2RenderingContext",
] }
wasm-bindgen = "0.2"

[features]
default = ["image-loading"]
image-loading = ["image"]
debug_inspector = []

[dev-dependencies]
winit = { version = "0.28.1", default-features = false }
euclid = "0.22.3"
rand = "0.8"
svg = "0.14.0"
usvg = { version = "0.33.0" }
instant = { version = "0.1", features = ["now"] }
resource = "0.5.0"
image = { version = "0.24.0", default-features = false, features = [
    "jpeg",
    "png",
] }
cosmic-text = { git = "https://github.com/pop-os/cosmic-text", rev = "e00109d77f06d5a2e3057865eda3f530bc40a046" }
swash = "^0.1" # keep this in sync with cosmic-text
lazy_static = "1.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
glutin = "0.30.0"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
web_sys = { version = "0.3", package = "web-sys", features = [
    "console",
    "WebGlContextAttributes",
] }
console_error_panic_hook = "0.1.5"
instant = { version = "0.1", features = ["wasm-bindgen", "now"] }
resource = { version = "0.5.0", features = ["force-static"] }
getrandom = { version = "0.2.2", features = ["js"] }

[[example]]
name = "book_example_1_1"
path = "book/src/1_getting_started/1_setting_up.rs"

[[example]]
name = "book_example_1_2"
path = "book/src/1_getting_started/2_rendering.rs"

[[example]]
name = "book_example_1_3"
path = "book/src/1_getting_started/3_event_loop.rs"

[package.metadata.docs.rs]
features = ["glutin/egl"]
